# akima

./: ChangeLog  DESCRIPTION  INDEX  LICENSE  MD5  NAMESPACE  PORTING  README  TITLE  acinclude.m4  cleanup  configure  configure.ac
R/: bicubic.R  bilinear.R  interp.R  interp.new.R  interp.old.R  interpp.R  interpp.new.R  interpp.old.R  zzz.R
data/: 00Index  akima.R  akima.rda  akima760.rda  franke.rda
man/: akima.Rd  akima760.Rd  aspline.Rd  bicubic.Rd  bicubic.grid.Rd  bilinear.Rd  bilinear.grid.Rd  franke.data.Rd  interp.Rd  interp.old.Rd  interp2xyz.Rd  interpp.Rd  interpp.old.Rd
orig/: 761  akima.bib
src/: Makefile  Makevars  Makevars.in  akima.h  akima.h.keep  akima.new.f  akima433.f  akima697.f  akima760.f  akima761.f  akima_res.rc  bilinear.f  idbvip.f  idcldp.f  idgrid.f  idlctn.f  idpdrv.f  idptip.f  idptli.f  idsfft.f  idtang.f  idxchg.f  init.c  so_locations  toms760.f  tripack.f  tripack.subset.f  ttidbs.f
src-c/: Makefile  akima.new.c  driver.c  idbvip.c  idcldp.c  idgrid.c  idlctn.c  idpdrv.c  idptip.c  idptli.c  idsfft.c  idtang.c  idxchg.c  tripack.subset.c  ttidbs.c
tools/: acinclude.m4
